# json-schema-faker-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: simple.rs
js/: package-lock.json  package.json  rollup.config.mjs
js/src/: main.js
src/: lib.rs
