[package]
name = "json-schema-faker"
authors = ["Evgeny Fomin <fominok@hotmail.com>"]
version = "0.1.0"
description = "Rust wrapper of JS' `json-schema-faker`"
edition = "2021"
keywords = ["data", "random", "generator", "jsonschema"]
categories = ["web-programming"]
homepage = "https://github.com/fominok/json-schema-faker-rs"
license = "MIT"

[dependencies]
serde_json = "1.0.111"
wasi-common = { version = "16.0.0", default-features = false }
wasmtime = { version = "16.0.0", default-features = false, features = ["cranelift"] }
wasmtime-wasi = { version = "16.0.0", default-features = false, features = ["sync"] }

[build-dependencies]
dircpy = "0.3.15"
wasmtime = { version = "16.0.0", default-features = false, features = ["cranelift"] }

[[example]]
name = "simple"
